rust/crates/spek/src/data_types/notation/snapshots/spek__data_types__notation__note__tests__test_note_from_strsharp_octave_cents.snap
---
source: crates/spek/src/data_types/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C#4+25
Note { pitch: C, accs: [Sharp], octave: Some(4), cents: Some(25) }
display:c♯4+25
