rust/crates/spek/src/data_types/notation/snapshots/spek__data_types__notation__note__tests__test_to_midiC.snap
---
source: crates/spek/src/data_types/notation/note.rs
expression: "format!(\"{note:?}{result:.0}\")"
---
Note { pitch: C, accs: [], octave: None, cents: None }12
