rust/crates/spek/src/data_types/notation/snapshots/spek__data_types__notation__note__tests__test_to_midiC_sharp_3.snap
---
source: crates/spek/src/data_types/notation/note.rs
expression: "format!(\"{note:?}{result:.0}\")"
---
Note { pitch: C, accs: [Sharp], octave: Some(3), cents: None }49
